src/test/ui/cross-file-errors/main.stderr
error: expected expression, found `_`
  --> $DIR/underscore.rs:18:9
   |
18 |         _
   |         ^
   | 
  ::: $DIR/main.rs:15:5
   |
15 |     underscore!();
   |     -------------- in this macro invocation

